Fixed some not showing images, and removed useless images.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <link rel= 'shortcut icon' href= '/media/WB1.png'/>
   <title>WorldBook</title>
 
 
@@ -17,9 +16,8 @@
 
   <!-- Custom Fonts -->
   <link href="vendor/fontawesome-free/css/all.css" rel="stylesheet" type="text/css">
-  <link href="vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet">
+  <!--<link href="vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet">-->
   <link href="https://fonts.googleapis.com/css?family=Poppins:500|Indie+Flower|Libre+Baskerville|Lobster|Lora|Merriweather|PT+Serif|Pacifico|Open+Sans:300,300i,400,400i,700,700i&display=swap" rel="stylesheet">
-
 
   <!-- Custom CSS -->
   <link href="style.css" rel="stylesheet">
@@ -265,10 +263,10 @@
                 <a href="https://www.facebook.com/alvaro.demiguel.1420" class="fa fa-facebook"></a>
               </li>
               <li class="list-inline-item">
-                <a href="https://twitter.com/alvaro_demi0" class="fa fa-twitter"></a>
+                <a href="https://twitter.com/alvarusky3" class="fa fa-twitter"></a>
               </li>
               <li class="list-inline-item">
-                <a href="https://www.instagram.com/alvaro.demi03/" class="fa fa-instagram"></a>
+                <a href="https://www.instagram.com/alvarodemiguel3" class="fa fa-instagram"></a>
               </li>
             </ul>
           </div>
@@ -277,7 +275,7 @@
       </div>
       <div class="row">
         <div class="col-lg-8 mx-auto text-center">
-          <p class="large text-muted openSans">Two friends from Sevilla with big dreams and the tools to make them real. </p>
+          <p class="large text-muted openSans">Two friends from Sevilla with big dreams and the tools to make them real.</p>
       </div>
     </div>
   </section>
@@ -348,7 +346,7 @@
     <div class="container wow fadeInUp">
       <div class="section-header">
         <h3 class="section-title openSans400">Contact</h3>
-        <p class="section-description openSans">Wanna tell us something wornderful? Contact us.</p>
+        <p class="section-description openSans">Wanna tell us something wonderful? Contact us.</p>
       </div>
     </div>
 
