Improved design on passwordReset.html

--- a/auth/welcome.html
+++ b/auth/welcome.html
@@ -34,16 +34,16 @@
         crossorigin="anonymous"></script>
 </head>
 <body>
-     <!-- Hero WB -->
+    <!-- Hero WB -->
   <section id="hero">
-        <div class="hero-container">
-          <h1 style=font-size:69px> <span style="color:#40ABF3;">WELCOME </span>TO THE <span style="color:#40ABF3;">WORLDBOOK </span></h1>
-          <h2 style=font-size:69px;> COMUNITY!</h2>
-          <h3><span style="color:#40ABF3;">Each </span>Book <span style="color:#40ABF3;">Counts. </span></h2>
-          <a href="/home" class="btn-get-started js-scroll-trigger">ENTER!</a>
-        </div>
-      </section>
-
+    <div class="poppins hero-container">
+      <h1>Welcome to the <br>
+      <span style="color:#40ABF3;">WorldBook</span> community</h1>
+      <br>
+      <h3>Each <span style="color:#40ABF3;">book</span> counts.</h3>
+      <a href="/home" class="btn-get-started js-scroll-trigger">Let's go!</a>
+    </div>
+  </section>
 </body>
 
 </html>
