--- a/auth/logIn/passwordReset.html
+++ b/auth/logIn/passwordReset.html
@@ -2,56 +2,73 @@
 <html lang= 'en'>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <link rel ='icon' type= 'image/ico' href= '/media/W-logo.png'/>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Poppins:300,400,500,700" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel= 'stylesheet' href= 'passwordReset.css'>
+
     <title>WorldBook | Reset password</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
+    <header>
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top navbar-shrink" id= 'mainNav'>
       <div class="container">
         <a class="navbar-brand js-scroll-trigger" href="../../index.html"><img src="../../media/WB1.png" alt="Logo" width="45" height="45"></a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Menu
           <i class="fas fa-bars"></i>
         </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+        <ul class="navbar-nav text-uppercase ml-auto">
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="/index.html#about">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="/index.html#services">Services</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="/index.html#team">Team</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="/index.html#portfolio">Gallery</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="/index.html#contact">Contact</a>
+          </li>
+          <div class='btn-toolbar' role= 'toolbar'>
+            <div class=" btn-group mr-2">
+                <button class="btn btn-primary" onclick="window.location= '/auth/logIn/index.html'">Login</button>
+              </div>
+          <div class=" btn-group mr-2 ">
+              <button class="btn btn-primary" onclick="window.location= '/auth/signUp/index.html'" type="button">Sign Up</button>
+            </div>
+          </div>
+
+        </ul>
+      </div>
       </div>
     </nav>
-    
-    <div id= 'container'>
-      <p>If you have forgotten your password, we'll send you an email with a reset password link</p>
-      <div class="form-group">
-        <label for="emailLabel">Your email:</label>
-        <input type="email" class="form-control" id="email" placeholder="Enter your email">
-        <small class= 'text text-danger' id= 'error'></small>
+    </header>
+
+    <div class= 'vertical-center'>
+      <div class= 'container openSans'>
+        <p class= 'openSans'>If you forgot your password, we'll send you an email with a reset password link</p>
+        <form>
+          <div class="form-group container" style= 'text-align: left'>
+            <label for="emailLabel">Your email:</label>
+            <input type="email" class="form-control" id="email" placeholder="Enter your email">
+            <small class= 'text text-danger' id= 'error'></small>
+            <br>
+            <button type="submit" class="btn btn-primary" onclick= 'sendPasswordReset()'>Submit</button>
+          </div>
+        </form>
+        <br>
+        <small class= 'text text-success' id= 'success'></small>
       </div>
-      <button type="submit" class="btn btn-primary" onclick= 'sendPasswordReset()'>Submit</button>
-      <br>
-      <small class= 'text text-success' id= 'success'></small>
     </div>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
     <!--Footer-->
-  <footer id="footer">
-      <div class="footer-top">
-        <div class="container">
-  
-        </div>
-      </div>
-  
+  <footer id="footer" class= 'footer'>
       <div class="container">
         <div class="copyright">
           &copy; Copyright <strong>WorldBook</strong>. All Rights Reserved
