--- a/auth/signUp/index.html
+++ b/auth/signUp/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
-
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <head>
     <meta charset="utf-8">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Poppins:300,400,500,700" rel="stylesheet">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel='stylesheet' href='signUp.css' />
     <!--Bootstrap-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -26,10 +25,10 @@
         <div class="login d-flex align-items-center py-5">
           <div class="container">
             <div class="row">
+              <div class="text-center mx-auto">
+                <h2 class="login-heading mb-4" style= ''>Welcome to <span style="color:#40ABF3;">the Comunity!</span></h2>
+              </div>
               <div class="col-md-9 col-lg-8 mx-auto">
-                <div class="text-center">
-                  <h2 class="login-heading mb-4">Welcome to <span style="color:#40ABF3;">the Comunity!</span></h2>
-                </div>
                 <div class="form-signin">
                   <div class="form-label-group">
                     <input type= 'text' id="inputUsername" class="form-control" placeholder="Username" required autofocus>
@@ -43,18 +42,18 @@
                     <small class= 'text text-danger' id= 'emError'></small>
                   </div>
 
-                  <hr>
-
-                  <div class="form-label-group">
+                  <div class= 'row'>
+                  <div class="form-label-group col">
                     <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
                     <label for="inputPassword">Password</label>
                     <small class= 'text text-danger' id= 'passError'></small>
                   </div>
 
-                  <div class="form-label-group">
+                  <div class="form-label-group col">
                     <input type="password" id="inputConfirmPassword" class="form-control" placeholder="Password" required>
                     <label for="inputConfirmPassword">Confirm password</label>
                     <small class= 'text text-danger' id= 'confirmPassError'></small>
+                  </div>
                   </div>
 
                   <button class="btn btn-lg btn-primary btn-block text-uppercase" onclick= 'signUp()'>Register</button>
