First login/signup system with PHP. No error handling at all

--- a/index.html
+++ b/index.html
@@ -13,13 +13,9 @@
 
   <!-- Bootstrap Core CSS -->
 <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-  <!-- Custom Fonts
-  <link href="vendor/fontawesome-free/css/all.css" rel="stylesheet" type="text/css"> -->
-
+  <!-- Custom Fonts-->
   <script src="https://kit.fontawesome.com/6838ece04b.js" crossorigin="anonymous"></script>
-
-  <!--<link href="vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet">-->
-    <link href="https://fonts.googleapis.com/css?family=Poppins:500,|Indie+Flower|Open+Sans:300,300i,400,400i,700,700i&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Poppins:500,|Indie+Flower|Open+Sans:300,300i,400,400i,700,700i&display=swap" rel="stylesheet">
 
 
   <!-- Custom CSS -->
@@ -66,10 +62,10 @@
           </li>
           <div class='btn-toolbar' role= 'toolbar'>
             <div class=" btn-group mr-2 openSans">
-                <button class="btn btn-primary" onclick="window.location= 'auth/logIn/index.html'">Login</button>
+                <button class="btn btn-primary" onclick="window.location= 'auth/logIn/'">Login</button>
               </div>
           <div class=" btn-group mr-2 ">
-              <button class="btn btn-primary" onclick="window.location= 'auth/signUp/index.html'" type="button">Sign Up</button>
+              <button class="btn btn-primary" onclick="window.location= 'auth/signUp/'" type="button">Sign Up</button>
             </div>
           </div>
 
@@ -197,8 +193,8 @@
   <section class="callout">
     <div class="container text-center">
       <h1 class="mx-auto mb-5 openSans600"><span style="color:#ffff;">Wanna be part of it?</span></h1>
-      <a class="btn btn-primary btn-lg openSans400" href="auth/signUp/index.html">Sign Up</a>&nbsp;&nbsp;
-      <a class="btn btn-primary btn-lg openSans400" href="auth/logIn/index.html">Login</a>
+      <a class="btn btn-primary btn-lg openSans400" href="auth/signUp/">Sign Up</a>&nbsp;&nbsp;
+      <a class="btn btn-primary btn-lg openSans400" href="auth/logIn/">Login</a>
     </div>
   </section>
 
@@ -438,8 +434,8 @@
 
 
 <script
-  src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"
-  integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU="
+  src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js"
+  integrity="sha256-eGE6blurk5sHj+rmkfsGYeKyZx3M4bG+ZlFyA7Kns7E="
   crossorigin="anonymous"></script>
   <!-- Custom scripts for this template -->
   <script src="main.js"></script>
@@ -490,12 +486,6 @@
   })(jQuery); // End of use strict
 
   </script>
-
-
-<script src="https://www.gstatic.com/firebasejs/6.3.4/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-database.js"></script>
-<script src="https://www.gstatic.com/firebasejs/7.2.3/firebase-firestore.js"></script>
-<script src="formFirebase.js"></script>
 
 
 </body>
