Handle server errors on PHP and database connections

--- a/index.html
+++ b/index.html
@@ -226,13 +226,13 @@
                 <!-- Add icon library -->
                 <link rel="stylesheet"
                   href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-                <a href="https://www.facebook.com/mvarelacaraballo" class="fa fa-facebook"></a>
+                <a href="https://www.facebook.com/mvarelacaraballo" class="fa fa-facebook" target='blank'></a>
               </li>
               <li class="list-inline-item">
-                <a href="https://twitter.com/Mara88280380" class="fa fa-twitter"></a>
+                <a href="https://twitter.com/Mara88280380" class="fa fa-twitter" target="blank"></a>
               </li>
               <li class="list-inline-item">
-                <a href="https://www.instagram.com/mariavarela04/" class="fa fa-instagram"></a>
+                <a href="https://www.instagram.com/mariavarela04/" class="fa fa-instagram" target="blank"></a>
               </li>
             </ul>
           </div>
@@ -247,13 +247,13 @@
                 <!-- Add icon library -->
                 <link rel="stylesheet"
                   href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-                <a href="https://www.facebook.com/alvaro.demiguel.1420" class="fa fa-facebook"></a>
+                <a href="https://www.facebook.com/alvaro.demiguel.1420" class="fa fa-facebook" target='blank'></a>
               </li>
               <li class="list-inline-item">
-                <a href="https://twitter.com/_alvarodemiguel" class="fa fa-twitter"></a>
+                <a href="https://twitter.com/_alvarodemiguel" class="fa fa-twitter" target='blank'></a>
               </li>
               <li class="list-inline-item">
-                <a href="https://www.instagram.com/alvarodemiguel3" class="fa fa-instagram"></a>
+                <a href="https://www.instagram.com/alvarodemiguel3" class="fa fa-instagram" target='blank'></a>
               </li>
             </ul>
           </div>
@@ -358,10 +358,10 @@
               href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
             <!-- Add font awesome icons -->
-            <a href="#" class="fa fa-facebook"></a>
-            <a href="#" class="fa fa-twitter"></a>
-            <a href="#" class="fa fa-instagram"></a>
-            <a href="#" class="fa fa-linkedin"></a>
+            <a href="#contact" class="fa fa-facebook"></a>
+            <a href="#contact" class="fa fa-twitter"></a>
+            <a href="#contact" class="fa fa-instagram"></a>
+            <a href="#contact" class="fa fa-linkedin"></a>
           </div>
 
         </div>
