--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   <!-- Custom Fonts-->
   <script src="https://kit.fontawesome.com/6838ece04b.js" crossorigin="anonymous"></script>
-  <link href="https://fonts.googleapis.com/css?family=Poppins:500,|Indie+Flower|Open+Sans:300,300i,400,400i,700,700i&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Poppins:500|Open+Sans:300,300i,400,400i,700,700i&display=swap" rel="stylesheet">
 
 
   <!-- Custom CSS -->
